--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		rel="stylesheet">
 	<link rel="icon" type="image/png" href="img/cifrado-copia.png">
 	<link rel="stylesheet" href="reset.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="styles.css">
 	<title>Encriptador ONE</title>
 </head>
 
